--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class=time id=time>0:00 / 0:00</div>
 </div>
 <audio id=audio loop>
-<source src="siempre50.MP3" type="audio/mpeg">
+<source src="siempre50.mp3" type="audio/mpeg">
 </audio>
 <script src=https://cdn.jsdelivr.net/npm/three@0.148.0/build/three.min.js></script>
 <script>
